--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -3,11 +3,14 @@
 
 <head>
     <title>Thymeleaf Demo</title>
+
+    <!-- reference CSS file -->
+    <link rel="stylesheet" th:href="@{/css/demo.css}" />
 </head>
 
 <body>
     <h1 th:text="'Hello ' + ${theName}"/>
-    <p th:text="'Time on the server is ' + ${theDate}"/>
+    <p th:text="'Time on the server is ' + ${theDate}" class="funny"/>
 
 </body>
 </html>
