Reading Form data with Spring Form

--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.backup.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.backup.html
@@ -9,10 +9,8 @@
 </head>
 
 <body>
-   Hello World of Spring!
+    <h1 th:text="'Hello ' + ${theName}"/>
+    <p th:text="'Time on the server is ' + ${theDate}" class="funny"/>
 
-<br><br>
-
-Student name: <span th:text="${param.studentName}" />
 </body>
 </html>
