--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -11,8 +11,14 @@
 <body>
    Hello World of Spring!
 
-<br><br> 
+<br><br>
 
 Student name: <span th:text="${param.studentName}" />
+
+
+   <br><br>
+
+
+The message: <span th:text="${message}" />
 </body>
 </html>
