--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld-form.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld-form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form th:action="@{/processFormVersionThree}" method="GET">
+    <form th:action="@{/processForm}" method="GET">
         <input type="text" name="studentName" placeholder="What's your name ?">
         <input type="submit" value="Submit" />
     </form>
