--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -21,10 +21,14 @@
 
     <select th:field="*{country}">
 
-        <option th:value="Brazil">Brazil</option>
-        <option th:value="France">France</option>
-        <option th:value="Germany">Germany</option>
-        <option th:value="India">India</option>
+<!--        <option th:value="Brazil">Brazil</option>-->
+<!--        <option th:value="France">France</option>-->
+<!--        <option th:value="Germany">Germany</option>-->
+<!--        <option th:value="India">India</option>-->
+
+        <!-- Loop through countries -->
+        <option th:each="tempCountry : ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"/>
+
 
     </select>
 
