Spring MVC Form - Radio Buttons

--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Student Registration Form</title>
@@ -31,6 +31,15 @@
 
 
     </select>
+
+    <br><br>
+
+    Favorite Programming Language:
+
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Php">Php</input>
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
 
     <br><br>
 
