--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
@@ -14,6 +14,10 @@ The student is confirmed: <span th:text="${student.firstName + ' ' + student.las
 
 Country: <span th:text="${student.country}"/>
 
+<br><br>
+
+Favorite Progrmming Language: <span th:text="${student.favoriteLanguage}"/>
+
 
 </body>
 </html>
