--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -36,11 +36,16 @@
 
     Favorite Programming Language:
 
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Php">Php</input>
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+<!--    <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>-->
+<!--    <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>-->
+<!--    <input type="radio" th:field="*{favoriteLanguage}" th:value="Php">Php</input>-->
+<!--    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>-->
 
+    <!-- loop the languages stored in the Props fe -->
+    <input type="radio" th:field="*{favoriteLanguage}"
+           th:each="tempLang : ${languages}"
+           th:value="${tempLang}"
+           th:text="${tempLang}"/>
     <br><br>
 
     <input type="submit" value="Submit"/>
