--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-confirmation.html
@@ -18,6 +18,13 @@ Country: <span th:text="${student.country}"/>
 
 Favorite Progrmming Language: <span th:text="${student.favoriteLanguage}"/>
 
+<br><br>
+
+Favorite Systems:
+
+<ul>
+    <li th:each="tempOs : ${student.favoriteSystems}" th:text="${tempOs}" />
+</ul>
 
 </body>
 </html>
