--- a/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -12,7 +12,7 @@
 <i>Fill out the form. Asterisk (*) means required</i>
 <br><br>
 
-<form th:action="@{/processForm}" th:object="customer" method="POST">
+<form th:action="@{/processForm}" th:object="${customer}" method="POST">
 
     First Name: <input type="text" th:field="*{firstName}"/>
 
@@ -22,7 +22,7 @@
 
     <!-- Add the error message if present -->
     <span th:if="${#fields.hasErrors('lastName')}"
-          th:errors="lastName"
+          th:errors="*{lastName}"
           class="error"></span>
 
     <br><br>
