--- a/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -9,6 +9,10 @@
 
 The customer is confirmed: <span th:text="${customer.firstName + ' ' + customer.lastName}"/>
 
+<br><br>
+
+Free passes: <span th:text="${customer.freePasses}"/>
+
 
 </body>
 </html>
