--- a/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -14,5 +14,10 @@ The customer is confirmed: <span th:text="${customer.firstName + ' ' + customer.
 Free passes: <span th:text="${customer.freePasses}"/>
 
 
+<br><br>
+
+Postal code: <span th:text="${customer.postalCode}"/>
+
+
 </body>
 </html>
