--- a/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -35,6 +35,13 @@
 
     <br><br>
 
+    Postal code: <input type="text" th:field="*{postalCode}" />
+    <span th:if="${#fields.hasErrors('postalCode')}"
+          th:errors="*{postalCode}"
+          class="error"></span>
+
+    <br><br>
+
     <input type="submit" value="Submit"/>
 
 </form>
