--- a/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-sping-boot-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -42,6 +42,13 @@
 
     <br><br>
 
+    Courser code: <input type="text" th:field="*{courseCode}" />
+    <span th:if="${#fields.hasErrors('courseCode')}"
+          th:errors="*{courseCode}"
+          class="error"></span>
+
+    <br><br>
+
     <input type="submit" value="Submit"/>
 
 </form>
