--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -14,6 +14,12 @@
     <h3>Employees Directory</h3>
     <hr>
 
+    <!-- Add a button -->
+    <a th:href="@{/employees/showFormForAdd}"
+        class="btn btn-primary btn-sm mb-3">
+        Add Employee
+    </a>
+
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
             <tr>
