--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/form-employee.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/form-employee.html
@@ -17,7 +17,8 @@
         <p class="h4 mb-4">Save Employee</p>
 
         <form action="#" th:object="${employee}"
-                            th:action="@{/employees/save}">
+                            th:action="@{/employees/save}"
+                            method="POST">
 
             <input type="text" th:field="*{firstName}" placeholder="First Name"
                    class="form-control mb-4 w-25">
