Adding the employee update feature

--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/form-employee.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/form-employee.html
@@ -20,6 +20,9 @@
                             th:action="@{/employees/save}"
                             method="POST">
 
+            <!-- Add hidden field to handle update -->
+            <input type="hidden" th:field="*{id}">
+
             <input type="text" th:field="*{firstName}" placeholder="First Name"
                    class="form-control mb-4 w-25">
             <input type="text" th:field="*{lastName}" placeholder="Last Name"
