--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -26,6 +26,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
+                <th>Action</th>
             </tr>
         </thead>
 
@@ -33,8 +34,14 @@
         <tbody>
             <tr th:each="temEmployee : ${employees}">
                 <td th:text="${temEmployee.firstName}"/>
-                <td th:text="${temEmployee.firstName}"/>
+                <td th:text="${temEmployee.lastName}"/>
                 <td th:text="${temEmployee.email}"/>
+                <td>
+                    <a th:href="@{/employees/showFormForUpdate(employeeId=${temEmployee.id})}"
+                        class="btn btn-info btn-sm">
+                        Update
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
