--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -41,6 +41,11 @@
                         class="btn btn-info btn-sm">
                         Update
                     </a>
+                    <a th:href="@{/employees/delete(employeeId=${temEmployee.id})}"
+                    class="btn btn-danger btn-sm"
+                    onclick="if (!(confirm('Are you sure you want to delete this employee ?'))) return false;">
+                        Delete
+                    </a>
                 </td>
             </tr>
         </tbody>
