--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/plain-login.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/plain-login.html
@@ -1,22 +1,33 @@
-
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Custom Login</title>
+
+    <style>
+        .failed {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
 <h3>My Custom Login Page</h3>
 
-<form action="#" th.action="@{authenticateTheUser}" method="POST">
-    <p>
-        User Naeme: <input type="text" name="username"/>
-    </p>
-    <p>
-        Password: <input type="passeword" name="username"/>
-    </p>
+<form action="#" th:action="@{authenticateTheUser}" method="POST">
 
+    <!-- check for login error -->
+    <div th:if="${param.error}">
+        <i class="failed">Sorry! You entered invalid username/password.</i>
+    </div>
+
+    <p>
+        User Name: <input type="text" name="username"/>
+    </p>
+    <p>
+        Password: <input type="password" name="password"/>
+    </p>
+     
     <input type="submit" value="Submit" />
 </form>
 
