Add logout support

--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/home.html
@@ -9,6 +9,14 @@
         Pop2C Company Home Page
     </h2>
 <hr>
-Welcome to our pop2C company web page
+    <p>
+        Welcome to our pop2C company web page
+    </p>
+
+    <!-- Add a logout button-->
+    <form action="#" th:action="@{/logout}" method="POST">
+        <input type="submit" value="Logout"/>
+    </form>
+
 </body>
 </html>
