--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/home.html
@@ -13,6 +13,17 @@
         Welcome to our pop2C company web page
     </p>
 
+    <hr>
+
+    <!-- Display user name and roles -->
+    <p>
+        User: <span sec:authentication="principal.username"></span>
+        <br><br>
+        Role(s): <span sec:authentication="principal.authorities"></span>
+    </p>
+
+    <hr>
+
     <!-- Add a logout button-->
     <form action="#" th:action="@{/logout}" method="POST">
         <input type="submit" value="Logout"/>
