--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/templates/home.html
@@ -22,18 +22,21 @@
         Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
 
-    <hr>
-    <!-- Add a link to point to /leaders ... this is for the managers -->
-    <p>
-        <a th:href="@{/leaders}">Leadership Meeting</a>
-        (Only for Manager peeps)
-    </p>
+    <div sec:authorize="hasRole('MANAGER')">
+        <!-- Add a link to point to /leaders ... this is for the managers -->
+        <p>
+            <a th:href="@{/leaders}">Leadership Meeting</a>
+            (Only for Manager peeps)
+        </p>
+    </div>
 
-    <!-- Add a lin to point /systems -->
-    <p>
-        <a th:href="@{/systems}">IT System Meeting</a>
-        (Only for Admin peeps)
-    </p>
+    <div sec:authorize="hasRole('ADMIN')">
+        <!-- Add a lin to point /systems -->
+        <p>
+            <a th:href="@{/systems}">IT System Meeting</a>
+            (Only for Admin peeps)
+        </p>
+    </div>
 
     <hr>
 
